--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "backend is the ultimate backend solution",
     "main": "server.js",
+    "typings": "index.d.ts",
     "scripts": {
         "setup": "npm install && npm update",
         "tsc": "tsc",
@@ -40,6 +41,7 @@
         "typescript": "^3.6.3"
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^8.5.6"
+        "@types/jsonwebtoken": "^8.5.6",
+        "@types/node": "^16.11.12"
     }
 }
